--- a/gofresh.html
+++ b/gofresh.html
@@ -6,7 +6,7 @@
     <title>GoFresh</title>
 </head>
 <body>
-<header class="p-2 text-bg-dark">
+<header>
     <div>
         <a href="/">
             <i class="bi bi-cart4" style="font-size: 30px"></i>
