--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
             <div class="total-price">Rs.0</div>
           </div>
 
-          <button class="btn-buy">Place Order</button>
+          <button class="btn-buy" on-click="billing.html"><a href="billing.html">Place Order</a></button>
 
           <ion-icon name="close" id="cart-close"></ion-icon>
         </div>
